--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     height: 100vh;
     background-color: var(--background);
     color: #fff;
+    /* overflow: hidden; */
 }
 
 /* General Styles */
