--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     padding: 0;
 }
 
-body {
+#app {
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-template-areas: 'sidebar content';
